# FractalSemantics

./: .blackboxrules  .cline-workflow-config.json  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CI_CD_SETUP.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  EXP07_MODULARIZATION_SUMMARY.md  EXP08_LAUNCHER_SUMMARY.md  EXP08_MODULARIZATION_SUMMARY.md  EXP09_MODULARIZATION_SUMMARY.md  EXP11_EXP11B_MODULARIZATION_SUMMARY.md  EXP12_MODULARIZATION_SUMMARY.md  EXP15_MODULARIZATION_SUMMARY.md  EXP16_MODULARIZATION_SUMMARY.md  EXP17_MODULARIZATION_SUMMARY.md  EXPERIMENT_FIXES_SUMMARY.md  EXPERIMENT_METHODS.md  EXPERIMENT_SUMMARY.md  FINAL_OPTIMIZATION_RESULTS.md  FINAL_PROJECT_STATUS.md  FINAL_VALIDATION_SUMMARY.md  GUI_DEVELOPMENT_SUMMARY.md  GUI_README.md  HF_SPACE_SOLUTION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTALL.md  LAUNCHER_SUMMARY.md  LICENSE  LINTING_FIXES.md  PARAMETER_OPTIMIZATION_REPORT.md  PROJECT_STATUS_SUMMARY.md  PUBLICATION_WORKFLOW.md  PYTHON_DEV_WORKFLOW_ANALYSIS.md  PYTHON_DEV_WORKFLOW_SUMMARY.md  QUICKSTART.md  README.md  README_HF_SPACE.md  (+67 more)
.cline/: README.md  mcp-server-config.json  run_tool.py  setup_global_tools.py  setup_markdown_system.py
.clinerules/: code-formatting.md  context7-mcp-usage.md  file_organization_workflow.md  gui-development.md
.embedding_cache/: all-MiniLM-L6-v2_cache.json
deploy/: DEPLOYMENT_GUIDE.md  HF_SPACE_SOLUTION_SUMMARY.md  README_HF_SPACE.md  app.py
docs/: EXP01_METHODOLOGY.md  EXP01_PEER_REVIEW_GUIDE.md  EXP01_PUBLICATION_CHECKLIST.md  EXP01_REPRODUCIBILITY.md  EXP01_RESULTS_TABLES.md  EXP01_SUMMARY.md  EXP02_METHODOLOGY.md  EXP02_RESULTS_TABLES.md  EXP02_SUMMARY.md  EXP03_METHODOLOGY.md  EXP03_REFACTORING_SUMMARY.md  TWO_LAYER_MODEL.md  experimental_configuration.md  math_formulas_reference.md
embeddings/: __init__.py  base_provider.py  factory.py  local_provider.py  openai_provider.py
fractalsemantics/: __init__.py  dynamic_enum.py  exp01_geometric_collision.py  exp02_retrieval_efficiency.py  exp03_coordinate_entropy.py  exp04_fractal_scaling.py  exp05_compression_expansion.py  exp06_entanglement_detection.py  exp07_luca_bootstrap.py  exp08_self_organizing_memory.py  exp09_memory_pressure.py  exp10_multidimensional_query.py  exp11_dimension_cardinality.py  exp11b_dimension_stress_test.py  exp12_benchmark_comparison.py  exp13_fractal_gravity.py  exp14_atomic_fractal_mapping.py  exp15_topological_conservation.py  exp16_hierarchical_distance_mapping.py  exp17_thermodynamic_validation.py  exp18_falloff_thermodynamics.py  exp19_orbital_equivalence.py  exp20_vector_field_derivation.py  exp21_earth_moon_sun.py  experiment_runner.py  experiment_utils.py  fractalsemantics_entity.py  fractalsemantics_experiments.py  progress_comm.py  subprocess_comm.py
fractalstat/: __init__.py  __main__.py  bob_stress_test.py  dynamic_enum.py  exp01_address_uniqueness.py  exp01_geometric_collision.py  exp01_geometric_collision_modular.py  exp02_retrieval_efficiency.py  exp02_retrieval_efficiency_modular.py  exp03_coordinate_entropy.py  exp03_coordinate_entropy_modular.py  exp03_dimension_necessity.py  exp04_fractal_scaling.py  exp04_fractal_scaling_modular.py  exp05_compression_expansion.py  exp05_compression_expansion_modular.py  exp06_entanglement_detection.py  exp06_entanglement_detection_modular.py  exp07_luca_bootstrap.py  exp08_llm_integration.py  exp08_rag_integration.py  exp08_self_organizing_memory.py  exp08_self_organizing_memory_modular.py  exp09_concurrency.py  exp09_memory_pressure.py  exp10_multidimensional_query.py  exp11_dimension_cardinality.py  exp11b_dimension_stress_test.py  exp12_benchmark_comparison.py  exp13_fractal_gravity.py  exp14_atomic_fractal_mapping.py  exp15_topological_conservation.py  exp16_hierarchical_distance_mapping.py  exp17_thermodynamic_validation.py  exp18_falloff_thermodynamics.py  exp19_orbital_equivalence.py  exp19_orbital_equivalence_modular.py  exp20_vector_field_derivation.py  experiment_utils.py  fractalstat_entity.py  (+11 more)
results/: exp01_address_uniqueness_20251207_234946.json  exp01_address_uniqueness_20251207_235027.json  exp01_address_uniqueness_20260108_230432.json  exp01_address_uniqueness_20260108_230734.json  exp01_address_uniqueness_20260108_231005.json  exp01_address_uniqueness_20260108_231613.json  exp01_address_uniqueness_20260108_232555.json  exp01_address_uniqueness_20260110_173429.json  exp01_address_uniqueness_20260129_170522.json  exp02_retrieval_efficiency_20260108_230822.json  exp02_retrieval_efficiency_20260108_231012.json  exp02_retrieval_efficiency_20260108_231620.json  exp02_retrieval_efficiency_20260108_232602.json  exp02_retrieval_efficiency_20260110_173459.json  exp02_retrieval_efficiency_20260129_170633.json  exp03_coordinate_entropy_20251208_001320.json  exp03_coordinate_entropy_20251208_002035.json  exp03_coordinate_entropy_20251208_002326.json  exp03_coordinate_entropy_20251208_004900.json  exp03_coordinate_entropy_20251208_010329.json  exp03_coordinate_entropy_20251208_010613.json  exp03_coordinate_entropy_20251208_011158.json  exp03_coordinate_entropy_20260108_230942.json  exp03_coordinate_entropy_20260108_231109.json  exp03_coordinate_entropy_20260108_231725.json  exp03_coordinate_entropy_20260108_232700.json  exp03_coordinate_entropy_20260110_173621.json  exp03_coordinate_entropy_20260129_170702.json  exp04_fractal_scaling_20251207_235007.json  exp04_fractal_scaling_20251207_235027.json  exp04_fractal_scaling_20260108_230948.json  exp04_fractal_scaling_20260108_231110.json  exp04_fractal_scaling_20260108_231727.json  exp04_fractal_scaling_20260108_232701.json  exp04_fractal_scaling_20260110_173643.json  exp04_fractal_scaling_20260129_171800.json  exp05_compression_expansion_20260110_173653.json  exp05_compression_expansion_20260129_172228.json  exp06_entanglement_detection_20260110_180033.json  exp07_luca_bootstrap_20251208_004902.json  (+45 more)
scripts/: archive_exp01_results.py  create_publication_archive.py  generate_doi_metadata.py  generate_exp01_figures.py  generate_exp02_figures.py
tests/: __init__.py  test_bob_stress_test.py  test_config_feature_flags.py  (+33 more)
(+348 files in other folders)
