[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fractalstat"
version = "0.1.0"
description = "FractalStat - Complete validation suite for STAT7 7-dimensional addressing system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Tiny Walnut Games", email = "contact@tinywalnutgames.com"}
]
keywords = ["stat7", "addressing", "fractal", "validation", "experiments", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.20.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-click>=8.1.0",
]

[project.urls]
Repository = "https://gitlab.com/tiny-walnut-games/the-seed"

[tool.setuptools]
packages = ["fractalstat", "fractalstat.embeddings"]

[tool.pytest.ini_options]
testpaths = ["tests"]
