[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "fractalsemantics"
version = "0.1.0"
description = "A complete validation suite for the FractalSemantics 8-dimensional addressing system"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [
    {name = "Tiny Walnut Games", email = "info@tinywalnut.games"}
]
maintainers = [
    {name = "Tiny Walnut Games", email = "info@tinywalnut.games"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.20.0",
    "click>=8.1.0",
    "tomli>=2.0.0; python_version < \"3.11\"",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-click>=7.1.0",
    "types-requests>=2.28.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0"
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0"
]
all = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-click>=7.1.0",
    "types-requests>=2.28.0",
    "pytest-cov>=4.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0"
]

[project.urls]
Homepage = "https://gitlab.com/tiny-walnut-games/fractalsemantics"
Repository = "https://gitlab.com/tiny-walnut-games/fractalsemantics.git"
Issues = "https://gitlab.com/tiny-walnut-games/fractalsemantics/-/issues"
Changelog = "https://gitlab.com/tiny-walnut-games/fractalsemantics/-/blob/main/CHANGELOG.md"

[project.scripts]
fractalsemantics = "fractalsemantics.fractalsemantics_experiments:main"
fractalsemantics-experiments = "fractalsemantics.fractalsemantics_experiments:main"
fractalsemantics-runner = "fractalsemantics.experiment_runner:main"

[tool.setuptools]
packages = ["fractalsemantics", "fractalsemantics.config", "fractalsemantics.embeddings"]

[tool.setuptools.package-data]
fractalsemantics = ["config/*.toml"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py39"
extend-exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "_build",
    "binder",
    "build",
    "dist",
    "docs/source/conf.py",
    "old",
    "out",
    "prof",
    "results",
    "scripts",
    "tests",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF100", # unused noqa (we want to know about these)
]
ignore = [
    "E501", # line too long (handled by black)
    "E203", # whitespace before ':'
    "E266", # too many leading '#' for block comment
    "E731", # do not assign a lambda expression, use a def
    "E741", # ambiguous variable name
    "F401", # imported but unused
    "F403", # 'from module import *' used; unable to detect undefined names
    "F405", # name may be undefined, or defined from star imports: module
    "F841", # local variable 'name' is assigned to but never used
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401", "F811", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["fractalsemantics"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "_build",
    "binder",
    "build",
    "dist",
    "docs/source/conf.py",
    "old",
    "out",
    "prof",
    "results",
    "scripts",
    "tests",
    "venv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-xvs --tb=short --strict-markers --disable-warnings -p no:dotenv"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["fractalsemantics"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
    "*/config/*",
    "*results/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "@abstract",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError()",
    "@unittest.skip",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.codespell]
count = "True"
